--- a/Informacion.html
+++ b/Informacion.html
@@ -37,7 +37,6 @@
       justify-content: center;
       overflow: hidden;
       padding: 2rem 0;
-      animation: gradientBG 15s ease infinite;
     }
 
     @keyframes gradientBG {
@@ -54,8 +53,10 @@
 
     /* Ajuste específico para la primera pantalla */
     .pantalla-inicial {
-      justify-content: flex-start;
       padding-top: 700px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .section-hidden {
@@ -71,17 +72,20 @@
     .divisiones {
       position: relative;
       z-index: 2;
-      padding: 3rem;
+      padding: 2.5rem;
       max-width: 420px;
       width: 90%;
-      border-radius: 30px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
+      border-radius: 30px;
       background: rgba(255, 255, 255, 0.92);
       backdrop-filter: blur(12px);
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       border: 1px solid rgba(255, 255, 255, 0.5);
       transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-      margin: 3rem auto;
       animation: floatIn 1.2s ease-out forwards;
     }
 
@@ -192,13 +196,11 @@
     }
 
     .audio-wrapper {
-      width: 85%;
-      max-width: 320px;
-      margin: 2.5rem auto;
+      width: 100%;
+      max-width: 300px;
+      margin: 2rem auto;
       display: flex;
       justify-content: center;
-      align-items: center;
-      animation: fadeInUp 0.8s ease-out;
     }
 
     .custom-audio-controls {
@@ -346,11 +348,15 @@
     }
 
     .info-section {
+      width: 100%;
+      max-width: 400px;
+      margin: 1.5rem auto;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       background: rgba(255, 255, 255, 0.95);
-      padding: 2.5rem;
       border-radius: 25px;
-      margin: 2rem auto;
-      max-width: 450px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       animation: floatIn 1s ease-out forwards, pulseGlow 3s infinite;
     }
@@ -929,33 +935,48 @@
     }
 
     /* Estilos para el contador más elegante */
+    .countdown-elegant {
+      width: 85%;
+      max-width: 300px;
+      margin: 1.5rem auto;
+      padding: 1.2rem;
+      background: linear-gradient(135deg, var(--rosa-intenso), var(--violeta));
+      border-radius: 20px;
+      color: white;
+      text-align: center;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      animation: pulseGlow 3s infinite;
+    }
+
     .countdown-container {
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 1rem;
-      margin: 2rem 0;
+      flex-wrap: wrap;
+      margin: 0 auto;
     }
 
     .countdown-item {
-      background: linear-gradient(45deg, var(--rosa-intenso), var(--violeta));
-      padding: 1rem;
-      border-radius: 15px;
-      min-width: 100px;
-      text-align: center;
-      color: white;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      background: rgba(255, 255, 255, 0.1);
+      padding: 0.8rem;
+      border-radius: 12px;
+      min-width: 65px;
+      backdrop-filter: blur(5px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
     }
 
     .countdown-number {
-      font-size: 2rem;
+      font-size: 1.4rem;
       font-weight: bold;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.2rem;
     }
 
     .countdown-label {
-      font-size: 0.9rem;
+      font-size: 0.7rem;
       text-transform: uppercase;
       letter-spacing: 1px;
+      opacity: 0.9;
     }
 
     @media (max-width: 768px) {
@@ -996,12 +1017,12 @@
 
     /* Estilos para los botones de ubicación */
     .location-buttons {
+      width: 100%;
       display: flex;
-      flex-wrap: wrap;
-      gap: 1.5rem;
       justify-content: center;
-      margin-top: 2.5rem;
-      animation: fadeInUp 0.8s ease-out;
+      gap: 1.2rem;
+      margin: 2rem auto;
+      flex-wrap: wrap;
     }
 
     .location-button {
@@ -1022,6 +1043,7 @@
       gap: 0.8rem;
       overflow: hidden;
       animation: fadeInUp 0.8s ease-out;
+      margin: 0.5rem;
     }
 
     .location-button::before {
@@ -1064,19 +1086,6 @@
 
     .location-button.forms:hover {
       background: linear-gradient(135deg, #7E57C2, #AB47BC);
-    }
-
-    @media (max-width: 768px) {
-      .location-buttons {
-        flex-direction: column;
-        padding: 0 1rem;
-      }
-
-      .location-button {
-        width: 100%;
-        text-align: center;
-        justify-content: center;
-      }
     }
 
     /* Estilos actualizados para el contador en su nueva ubicación */
@@ -1259,56 +1268,25 @@
 
     /* Ajustes responsive */
     @media (max-width: 768px) {
-      .location-buttons,
-      .botones {
+      .location-buttons {
         flex-direction: column;
-        gap: 1rem;
-        width: 90%;
-        max-width: 300px;
+        padding: 0 1rem;
       }
 
-      .location-button,
-      .botones a {
+      .location-button {
         width: 100%;
-        max-width: 250px;
-      }
-
-      .custom-audio-controls {
-        gap: 0.8rem;
-        padding: 0.8rem;
-        max-width: 300px;
-      }
-
-      #progressBar {
-        max-width: 150px;
+        max-width: 280px;
+        text-align: center;
+        justify-content: center;
+        padding: 1rem 2rem;
       }
     }
 
     @media (max-width: 480px) {
-      .location-buttons,
-      .botones {
-        width: 95%;
-        max-width: 250px;
-      }
-
-      .location-button,
-      .botones a {
-        max-width: 220px;
-        padding: 0.8rem 1.5rem;
-      }
-
-      .custom-audio-controls {
-        max-width: 250px;
-        padding: 0.7rem;
-      }
-
-      #progressBar {
-        max-width: 120px;
-      }
-
-      #autoPlayButton,
-      .floating-music {
-        transform: translateX(-50%) scale(0.9);
+      .location-button {
+        max-width: 240px;
+        padding: 0.9rem 1.8rem;
+        font-size: 1rem;
       }
     }
 
@@ -1526,8 +1504,8 @@
     /* Mejoras en el reproductor de audio */
     .audio-wrapper {
       width: 90%;
-      max-width: 350px;
-      margin: 2rem auto;
+      max-width: 280px;
+      margin: 1.5rem auto;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -1559,8 +1537,8 @@
       }
 
       .audio-wrapper {
-        width: 85%;
-        max-width: 300px;
+        width: 92%;
+        max-width: 260px;
         margin: 1.5rem auto;
       }
 
@@ -1582,8 +1560,8 @@
       }
 
       .audio-wrapper {
-        width: 90%;
-        max-width: 260px;
+        width: 94%;
+        max-width: 240px;
         margin: 1rem auto;
       }
 
@@ -1651,44 +1629,44 @@
     @media (max-width: 768px) {
       .divisiones {
         width: 92%;
-        padding: 2.5rem;
-        margin: 2rem auto;
+        padding: 1.8rem;
+        margin: 1rem auto;
       }
 
       .audio-wrapper {
-        width: 90%;
-        max-width: 300px;
-        margin: 2rem auto;
+        width: 92%;
+        max-width: 260px;
+        margin: 1.5rem auto;
       }
 
       .countdown-elegant {
-        width: 90%;
-        max-width: 300px;
-        padding: 1.5rem;
+        width: 92%;
+        max-width: 260px;
+        padding: 1.2rem;
       }
 
       .custom-audio-controls {
-        padding: 1.2rem;
-        gap: 1rem;
+        padding: 1rem;
+        gap: 0.8rem;
       }
     }
 
     @media (max-width: 480px) {
       .divisiones {
         width: 94%;
-        padding: 2rem;
+        padding: 1.5rem;
         margin: 1.5rem auto;
       }
 
       .audio-wrapper {
-        width: 92%;
-        max-width: 280px;
+        width: 94%;
+        max-width: 240px;
         margin: 1.5rem auto;
       }
 
       .countdown-elegant {
-        width: 92%;
-        max-width: 280px;
+        width: 94%;
+        max-width: 240px;
         padding: 1.2rem;
       }
 
@@ -1701,6 +1679,234 @@
     /* Eliminar la sección del timeline */
     .timeline {
       display: none;
+    }
+
+    /* Optimizaciones para centrado en móvil */
+    .half-screen {
+      position: relative;
+      width: 100vw;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      padding: 2rem 0;
+    }
+
+    /* Ajuste específico para la primera pantalla en móvil */
+    .pantalla-inicial {
+      padding-top: 600px;
+    }
+
+    /* Mejoras en el centrado de divisiones para móvil */
+    .divisiones {
+      position: relative;
+      z-index: 2;
+      padding: 2rem;
+      width: 90%;
+      max-width: 420px;
+      margin: 1rem auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.92);
+      backdrop-filter: blur(12px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      border-radius: 25px;
+    }
+
+    /* Centrado mejorado para móvil */
+    .info-section {
+      width: 90%;
+      max-width: 380px;
+      margin: 1rem auto;
+      padding: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    /* Ajustes del contador para móvil */
+    .countdown-elegant {
+      width: 90%;
+      max-width: 280px;
+      margin: 1rem auto;
+      padding: 1rem;
+    }
+
+    .countdown-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.8rem;
+      margin: 0 auto;
+    }
+
+    .countdown-item {
+      min-width: 60px;
+      padding: 0.7rem;
+    }
+
+    /* Centrado de audio para móvil */
+    .audio-wrapper {
+      width: 90%;
+      max-width: 280px;
+      margin: 1.5rem auto;
+    }
+
+    .custom-audio-controls {
+      padding: 1rem;
+      gap: 0.8rem;
+    }
+
+    /* Ajustes de botones para móvil */
+    .location-buttons {
+      width: 90%;
+      max-width: 280px;
+      margin: 1.5rem auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    .location-button {
+      width: 100%;
+      max-width: 250px;
+      margin: 0.3rem auto;
+      padding: 1rem 1.8rem;
+      justify-content: center;
+    }
+
+    /* Ajustes responsive mejorados */
+    @media (max-width: 768px) {
+      .pantalla-inicial {
+        padding-top: 450px;
+      }
+
+      .divisiones {
+        width: 92%;
+        padding: 1.8rem;
+        margin: 1rem auto;
+      }
+
+      .divisiones h1 {
+        font-size: 2.5em !important;
+      }
+
+      .info-section {
+        width: 92%;
+        padding: 1.3rem;
+      }
+
+      .info-section h2 {
+        font-size: 2rem;
+      }
+
+      .countdown-elegant {
+        width: 92%;
+        max-width: 260px;
+      }
+
+      .audio-wrapper {
+        width: 92%;
+        max-width: 260px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .pantalla-inicial {
+        padding-top: 380px;
+      }
+
+      .divisiones {
+        width: 94%;
+        padding: 1.5rem;
+      }
+
+      .divisiones h1 {
+        font-size: 2.2em !important;
+      }
+
+      .info-section {
+        width: 94%;
+        padding: 1.2rem;
+      }
+
+      .info-section h2 {
+        font-size: 1.8rem;
+      }
+
+      .countdown-elegant {
+        width: 94%;
+        max-width: 240px;
+      }
+
+      .countdown-item {
+        min-width: 55px;
+        padding: 0.6rem;
+      }
+
+      .audio-wrapper {
+        width: 94%;
+        max-width: 240px;
+      }
+
+      .location-button {
+        max-width: 220px;
+        padding: 0.9rem 1.5rem;
+        font-size: 1rem;
+      }
+    }
+
+    @media (max-width: 360px) {
+      .pantalla-inicial {
+        padding-top: 320px;
+      }
+
+      .divisiones {
+        width: 96%;
+        padding: 1.2rem;
+      }
+
+      .divisiones h1 {
+        font-size: 2em !important;
+      }
+
+      .info-section {
+        width: 96%;
+        padding: 1rem;
+      }
+
+      .info-section h2 {
+        font-size: 1.6rem;
+      }
+
+      .countdown-elegant {
+        width: 96%;
+        max-width: 220px;
+      }
+
+      .countdown-item {
+        min-width: 50px;
+        padding: 0.5rem;
+      }
+
+      .audio-wrapper {
+        width: 96%;
+        max-width: 220px;
+      }
+
+      .location-button {
+        max-width: 200px;
+        padding: 0.8rem 1.4rem;
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
