--- a/Informacion.html
+++ b/Informacion.html
@@ -3177,6 +3177,177 @@
         font-size: 0.85em;
       }
     }
+
+    /* Estilos unificados para todos los botones */
+    .button-container {
+      width: 100%;
+      max-width: 280px;
+      margin: 0.8rem auto;
+      display: flex;
+      flex-direction: column;
+      gap: 0.6rem;
+      align-items: center;
+    }
+
+    .custom-button {
+      width: 100%;
+      max-width: 260px;
+      padding: 0.9rem 1.2rem;
+      border-radius: 50px;
+      font-size: 0.95rem;
+      font-weight: 600;
+      text-decoration: none;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.6rem;
+      transition: all 0.3s ease;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      margin: 0.3rem auto;
+    }
+
+    /* Ajustes responsive mejorados */
+    @media (max-width: 768px) {
+      .button-container {
+        max-width: 260px;
+        gap: 0.5rem;
+      }
+
+      .custom-button {
+        max-width: 240px;
+        padding: 0.8rem 1.1rem;
+        font-size: 0.9rem;
+      }
+
+      .custom-audio-controls {
+        max-width: 260px;
+        padding: 0.8rem;
+        gap: 0.6rem;
+      }
+
+      .custom-audio-controls button {
+        width: 34px;
+        height: 34px;
+        font-size: 0.9rem;
+      }
+
+      #progressBar {
+        max-width: 110px;
+      }
+
+      .info-section {
+        width: 90%;
+        max-width: 300px;
+        padding: 1.2rem;
+      }
+    }
+
+    @media (max-width: 360px) {
+      .button-container {
+        max-width: 240px;
+        gap: 0.4rem;
+      }
+
+      .custom-button {
+        max-width: 220px;
+        padding: 0.7rem 1rem;
+        font-size: 0.85rem;
+      }
+
+      .custom-audio-controls {
+        max-width: 240px;
+        padding: 0.7rem;
+        gap: 0.5rem;
+      }
+
+      .custom-audio-controls button {
+        width: 32px;
+        height: 32px;
+        font-size: 0.85rem;
+      }
+
+      #progressBar {
+        max-width: 100px;
+      }
+
+      .info-section {
+        width: 92%;
+        max-width: 280px;
+        padding: 1rem;
+      }
+    }
+
+    /* Ajustes específicos para los botones de ubicación */
+    .location-button {
+      background: linear-gradient(135deg, var(--rosegold-dark), var(--dorado));
+      box-shadow: 0 4px 12px rgba(183, 110, 121, 0.2);
+    }
+
+    .location-button:hover {
+      background: linear-gradient(135deg, var(--dorado), var(--rosegold-dark));
+      box-shadow: 0 6px 16px rgba(183, 110, 121, 0.3);
+      transform: translateY(-2px);
+    }
+
+    /* Ajustes específicos para el botón de WhatsApp */
+    .wishes-button {
+      background: linear-gradient(135deg, #25D366, #128C7E);
+      box-shadow: 0 4px 12px rgba(37, 211, 102, 0.3);
+    }
+
+    .wishes-button:hover {
+      background: linear-gradient(135deg, #128C7E, #25D366);
+      box-shadow: 0 6px 16px rgba(37, 211, 102, 0.4);
+      transform: translateY(-2px);
+    }
+
+    /* Ajustes para los controles de audio */
+    .custom-audio-controls {
+      width: 100%;
+      max-width: 280px;
+      margin: 0.8rem auto;
+      padding: 0.9rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.8rem;
+      background: linear-gradient(135deg, rgba(255, 255, 255, 0.95), rgba(248, 200, 220, 0.15));
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(183, 110, 121, 0.2);
+      box-shadow: 0 4px 12px rgba(183, 110, 121, 0.15);
+    }
+
+    .custom-audio-controls button {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      border: none;
+      background: linear-gradient(45deg, var(--rosegold-dark), var(--dorado));
+      color: white;
+      font-size: 1rem;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 12px rgba(183, 110, 121, 0.2);
+    }
+
+    .custom-audio-controls button:hover {
+      transform: scale(1.05);
+      background: linear-gradient(45deg, var(--dorado), var(--rosegold-dark));
+    }
+
+    #progressBar {
+      flex: 1;
+      height: 5px;
+      border-radius: 3px;
+      background: linear-gradient(to right, var(--rosegold-dark), var(--dorado));
+      cursor: pointer;
+      max-width: 130px;
+    }
   </style>
 </head>
 <body>
@@ -3239,12 +3410,12 @@
         <p><strong>Lugar:</strong> Iglesia de Nuestra Señora Del Perpetuo Socorro</p>
         <p><strong>Dirección:</strong> Alejandro VI 304, Villa del Obispo, 66214 San Pedro Garza García, N.L.</p>
 
-        <div class="location-buttons">
-          <a href="https://maps.app.goo.gl/xefMnayaojpAtgYe7?g_st=awb" target="_blank" class="location-button maps">
+        <div class="button-container">
+          <a href="https://maps.app.goo.gl/xefMnayaojpAtgYe7?g_st=awb" target="_blank" class="custom-button location-button">
             <i class="fas fa-map-marker-alt"></i>
             Ver ubicación
           </a>
-          <a href="https://forms.gle/tuFormularioAqui" target="_blank" class="location-button forms">
+          <a href="https://forms.gle/tuFormularioAqui" target="_blank" class="custom-button location-button">
             <i class="fas fa-clipboard-check"></i>
             Confirmar Asistencia
           </a>
@@ -3267,8 +3438,8 @@
         <p><strong>Lugar:</strong> La Cascada Onix y Ambar</p>
         <p><strong>Dirección:</strong> esquina con, Tegucigalpa y Maravillas 1400, C. de las Artes, Zimix, 66358 Cdad. Santa Catarina, N.L.</p>
 
-        <div class="location-buttons">
-          <a href="https://maps.app.goo.gl/xHctfeogYbsG7HCT9?g_st=awb" target="_blank" class="location-button maps">
+        <div class="button-container">
+          <a href="https://maps.app.goo.gl/xHctfeogYbsG7HCT9?g_st=awb" target="_blank" class="custom-button location-button">
             <i class="fas fa-map-marker-alt"></i>
             Ver ubicación
           </a>
@@ -3357,10 +3528,10 @@
           Me encantaría recibir tus buenos deseos y mensajes en este día tan especial. Comparte conmigo tus palabras a través de WhatsApp.
         </p>
 
-        <div class="wishes-button-container">
+        <div class="button-container">
           <a href="https://wa.me/1234567890?text=¡Hola Frida! Quiero compartir contigo mis deseos para tus XV años..." 
              target="_blank" 
-             class="wishes-button">
+             class="custom-button wishes-button">
             <i class="fab fa-whatsapp"></i>
             Enviar mensaje
           </a>
