--- a/Informacion.html
+++ b/Informacion.html
@@ -275,11 +275,73 @@
     .deseos            { --bias: 28vh; }
 
     /* Pequeños ajustes responsive */
-    @media (max-width: 768px) {
-      .half-screen       { --bias: 22vh; }
-      .pantalla-inicial  { --bias: 26vh; }
-      .pantalla-rosgold  { --bias: 24vh; }
-      .regalos           { --bias: 26vh; }
+/* Pequeños ajustes responsive */
+    @media (max-width: 600px) {
+      .half-screen img.img-portrait,
+      .half-screen img {
+        width: 100vw !important;
+        height: 60vh !important;
+        max-width: 100vw !important;
+        max-height: 60vh !important;
+        object-fit: cover !important;
+        object-position: center 40% !important;
+        border-radius: 0 !important;
+        margin: 0 !important;
+        left: 0 !important;
+        top: 0 !important;
+        position: absolute !important;
+        z-index: 1;
+      }
+
+      .half-screen {
+        min-height: 70vh !important;
+        padding: 0 !important;
+      }
+
+      .divisiones {
+        margin-top: 10vh !important;
+        margin-bottom: 4vh !important;
+        position: relative !important;
+        z-index: 2;
+        background: rgba(255,255,255,0.92) !important;
+      }
+    }
+
+    /* --- IMÁGENES EN SECCIONES DE REGALOS Y DESEOS --- */
+    @media (max-width: 600px) {
+      .regalos img,
+      .deseos img {
+        object-position: center 45% !important;
+        height: 50vh !important;
+        max-height: 50vh !important;
+      }
+    }
+
+    /* --- IMÁGENES EN SECCIÓN ROSGOLD --- */
+    @media (max-width: 600px) {
+      .pantalla-rosgold img {
+        object-position: center 35% !important;
+        height: 40vh !important;
+        max-height: 40vh !important;
+      }
+    }
+
+    /* --- IMÁGENES EN SECCIÓN CELEBRACION --- */
+    @media (max-width: 600px) {
+      .celebracion img {
+        object-position: center 40% !important;
+        height: 50vh !important;
+        max-height: 50vh !important;
+      }
+    }
+
+    /* --- IMÁGENES EN SECCIÓN INICIAL --- */
+    @media (max-width: 600px) {
+      .pantalla-inicial img {
+        object-position: center 30% !important;
+        height: 55vh !important;
+        max-height: 55vh !important;
+      }
     }
 
 
@@ -4733,4 +4795,5 @@
 
 </body>
 </html>
+
 
