--- a/Informacion.html
+++ b/Informacion.html
@@ -275,13 +275,38 @@
     .deseos            { --bias: 28vh; }
 
     /* Pequeños ajustes responsive */
-/* Pequeños ajustes responsive */
-        @media (max-width: 768px) {
-      .half-screen       { --bias: 22vh; }
-      .pantalla-inicial  { --bias: 22vh; }
-      .pantalla-rosgold  { --bias: 24vh; }
-      .regalos           { --bias: 26vh; }
+    /* Pequeños ajustes responsive */
+    @media (max-width: 768px) {
+      .half-screen img,
+      .img-portrait {
+        width: 100vw !important;
+        height: 55vh !important;
+        max-width: 100vw !important;
+        max-height: 55vh !important;
+        object-fit: cover !important;
+        object-position: center 35% !important;
+        display: block !important;
+        margin: 0 auto !important;
+        border-radius: 0 !important;
+        position: absolute !important;
+        left: 0 !important;
+        top: 0 !important;
+        z-index: 1;
+      }
+      .half-screen {
+        min-height: 70vh !important;
+        padding: 0 !important;
+      }
     }
+
+/* Ajuste para pantallas muy pequeñas */
+@media (max-width: 480px) {
+  .half-screen img,
+  .img-portrait {
+    height: 45vh !important;
+    object-position: center 40% !important;
+  }
+}
 
 
     .half-screen img {
@@ -4734,6 +4759,7 @@
 
 </body>
 </html>
+
 
 
 
