--- a/Informacion.html
+++ b/Informacion.html
@@ -275,38 +275,61 @@
     .deseos            { --bias: 28vh; }
 
     /* Pequeños ajustes responsive */
-    /* Pequeños ajustes responsive */
-    @media (max-width: 768px) {
-      .half-screen img,
-      .img-portrait {
-        width: 100vw !important;
-        height: 55vh !important;
-        max-width: 100vw !important;
-        max-height: 55vh !important;
-        object-fit: cover !important;
-        object-position: center 35% !important;
-        display: block !important;
-        margin: 0 auto !important;
-        border-radius: 0 !important;
-        position: absolute !important;
-        left: 0 !important;
-        top: 0 !important;
-        z-index: 1;
-      }
-      .half-screen {
-        min-height: 70vh !important;
-        padding: 0 !important;
-      }
+     @media (max-width: 768px) {
+    .half-screen img,
+    .img-portrait {
+      width: 100vw !important;
+      height: 100vh !important;
+      max-width: 100vw !important;
+      max-height: 100vh !important;
+      object-fit: cover !important;
+      object-position: center 35% !important;
+      position: absolute !important;
+      left: 0 !important;
+      top: 0 !important;
+      z-index: 1;
+      opacity: 0.9 !important;
+      filter: brightness(1.08) contrast(1.08) saturate(1.08) !important;
     }
-
-/* Ajuste para pantallas muy pequeñas */
-@media (max-width: 480px) {
-  .half-screen img,
-  .img-portrait {
-    height: 45vh !important;
-    object-position: center 40% !important;
+  
+    .half-screen {
+      min-height: 100vh !important;
+      padding: 2rem 0 !important;
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
+    }
+  
+    .divisiones {
+      position: relative !important;
+      z-index: 2 !important;
+      max-width: 620px !important;
+      width: 90% !important;
+      margin: 80px auto !important;
+      padding: 3rem 2rem !important;
+      background: rgba(255,255,255,0.6) !important;
+      backdrop-filter: blur(15px) !important;
+      border-radius: 30px !important;
+      box-shadow: 0 12px 40px rgba(183,110,121,0.25), 0 4px 20px rgba(0,0,0,0.1) !important;
+      text-align: center !important;
+      display: flex !important;
+      flex-direction: column !important;
+      align-items: center !important;
+    }
+  
+    .info-section,
+    .mesa-regalos {
+      max-width: 400px !important;
+      width: 100% !important;
+      margin: 1.5rem auto !important;
+      padding: 2rem !important;
+      border-radius: 25px !important;
+      background: linear-gradient(135deg, rgba(255,255,255,0.98), rgba(248,200,220,0.2)) !important;
+      box-shadow: 0 10px 35px rgba(183,110,121,0.2), 0 4px 15px rgba(0,0,0,0.08) !important;
+      text-align: center !important;
+      backdrop-filter: blur(12px) !important;
+    }
   }
-}
 
 
     .half-screen img {
@@ -4759,6 +4782,7 @@
 
 </body>
 </html>
+
 
 
 
