--- a/Informacion.html
+++ b/Informacion.html
@@ -276,21 +276,11 @@
 
     /* Pequeños ajustes responsive */
     @media (max-width: 768px) {
-      .half-screen img,
-      .img-portrait {
-        width: 100vw !important;
-        height: 100vh !important;
-        max-width: 100vw !important;
-        max-height: 100vh !important;
-        object-fit: cover !important;
-        object-position: center 35% !important;
-        position: absolute !important;
-        left: 0 !important;
-        top: 0 !important;
-        z-index: 1;
-        opacity: 0.9 !important;
-        filter: brightness(1.08) contrast(1.08) saturate(1.08) !important;
-      }
+      .half-screen       { --bias: 22vh; }
+      .pantalla-inicial  { --bias: 22vh; }
+      .pantalla-rosgold  { --bias: 24vh; }
+      .regalos           { --bias: 26vh; }
+    }
   
     .half-screen {
       min-height: 100vh !important;
@@ -4782,6 +4772,7 @@
 
 </body>
 </html>
+
 
 
 
